Sun Oct  6 15:17:18 1996  Samuel Tardieu  <sam@inf.enst.fr>

	* s-gsmasp.ads: New file.

	* s-garser.ads: New file.

Mon Sep 30 16:13:29 1996  Samuel Tardieu  <sam@inf.enst.fr>

	* Makefile.am: Would look for s-gtplsp.ads in the bad place.

Sun Sep 15 17:27:30 1996  Samuel Tardieu  <sam@inf.enst.fr>

	* s-garhea.adb: Added an Emergency_Stop in the Shutdown procedure
	  (see the procedure for explanation).

Thu Sep 12 14:55:27 1996  Samuel Tardieu  <sam@inf.enst.fr>

	* mkdep: Change the way dependencies are generated. This one seems
	  to be the good one.

	* s-garter.adb: Don't check Get_Active_Task_Count during the
	  second termination phase to avoid unexpected rejection of
	  termination.

Wed Sep 11 19:43:48 1996  Samuel Tardieu  <sam@inf.enst.fr>

	* s-garhea.adb: Added the framework needed to free an unused
	  Partition_ID.

Tue Sep 10 10:21:53 1996  Samuel Tardieu  <sam@inf.enst.fr>

	* Makefile.am: Added s-stratt.adb and s-stratt.o to the list of
	  installed files.

	* s-garthi.ads: Added an (ugly) use type clause for
	  Interfaces.C.int.

Fri Sep  6 17:52:46 1996  Samuel Tardieu  <sam@inf.enst.fr>

	* s-garter.adb: Added spec for Get_Active_Task_Count.

	* s-garter.ads: Removed Get_Active_Task_Count from spec.

Mon Sep  2 18:03:05 1996  Samuel Tardieu  <sam@inf.enst.fr>

	* s-stratt.ads: Added.

	* s-rpc.ads: Removed the offending declaration.

	* s-rpc.adb: Allow mixed Read and Write calls. Allocate Node
	  packets during the first Write call.

Fri Aug 16 12:36:11 1996  Samuel Tardieu  <sam@inf.enst.fr>

	* s-parint.adb: Added a pragma Elaborate_All for
	  System.Garlic.Startup.

Tue Aug 13 13:43:00 1996  Samuel Tardieu  <sam@inf.enst.fr>

	* Makefile.am: Added s-garpri.{ads,ali,o}.

	* s-garpri.ads: New file defining static priorities.

	* s-rpc.adb: Take priorities into accounts (transmit priorities
	  from end to end and use static priorites for other tasks).

	* s-garter.adb: Idem.

	* s-gartcp.adb: Idem.

	* s-ganobl.adb: Idem.
